...
        view.translatesAutoresizingMaskIntoConstraints = false
        return view
    }()

    private lazy var loginLabel: UILabel = {
        let label = UILabel()
        label.text = "Log in"
        label.textColor = .appGrayTextColor
        label.translatesAutoresizingMaskIntoConstraints = false
        return label
    }()

    private let spotifyImage: UIImageView = {
...
